--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ strum_macros = "0.26"
 gloo = "0.11"
 yew = { version = "0.21", features = ["csr"] }
 serde_json = "1.0.133"
+tera = "1.20.0"
+yew-autoprops = "0.4.1"
 
 [dependencies.web-sys]
 version = "0.3"
