working, removed embedded-binary static content in favor of cloudflare static worker content feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 
-members = [ "mnemnos-types",
-    "mnemnos-wasm", "mnemnos-wasm-packed",
+members = [
+    "mnemnos-types",
+    "mnemnos-wasm",
     "mnemnos-worker"
 ]
