--- a/mnemnos-worker/Cargo.toml
+++ b/mnemnos-worker/Cargo.toml
@@ -15,9 +15,12 @@ wasm-opt = false
 crate-type = ["cdylib"]
 
 [dependencies]
-# mnemnos-wasm-packed = { path = "../mnemnos-wasm-packed"}
+mnemnos-types = { path = "../mnemnos-types"}
 worker = { version="0.4.2", features=['http', 'axum'] }
 worker-macros = { version="0.4.2", features=['http'] }
-axum  = { version = "0.7", default-features = false }
+axum  = { version = "0.7", default-features = false, features = ["json", "macros"] }
 tower-service = "0.3.2"
 console_error_panic_hook = { version = "0.1.1" }
+serde_json = "1.0.133"
+futures = "0.3.31"
+anyhow = "1.0.93"
