--- a/mnemnos-wasm/Cargo.toml
+++ b/mnemnos-wasm/Cargo.toml
@@ -11,6 +11,7 @@ serde = { version = "1.0", features = ["derive"] }
 strum = "0.26"
 strum_macros = "0.26"
 gloo = "0.11"
+gloo-net = {version="0.6", features=["json"]}
 yew = { version = "0.21", features = ["csr"] }
 serde_json = "1.0"
 tera = "1.20.0"
