--- a/mnemnos-worker/Cargo.toml
+++ b/mnemnos-worker/Cargo.toml
@@ -24,3 +24,5 @@ console_error_panic_hook = { version = "0.1.1" }
 serde_json = "1.0.133"
 futures = "0.3.31"
 anyhow = "1.0.93"
+reqwasm = "0.5.0"
+reqwest_wasi = "0.11.16"
