--- a/mnemnos-worker/wrangler.toml
+++ b/mnemnos-worker/wrangler.toml
@@ -10,3 +10,6 @@ command = "cargo install -q worker-build && worker-build --release"
 [[r2_buckets]]
 binding = 'STORAGE' # must be a valid JavaScript variable name
 bucket_name = 'mnemnos-state'
+
+[observability.logs]
+enabled = true
